# impact-protocols

./: .gitignore  Cargo.toml  Makefile  README.md  TODOS.md  funding.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci-cd.yml  ileap-data-model-ci.yml  ileap-demo-api-ci-cd.yml  pact-data-model-ci.yml
demo-api/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  fly.production.toml  fly.staging.toml
demo-api/src/: api_types.rs  auth.rs  cors.rs  error.rs  main.rs  openid_conf.rs  sample_data.rs
ileap-data-model/: Cargo.toml  README.md
ileap-data-model/schemas/: Untitled-1.json  ar.json  hoc.json  pcf--hoc.json  pcf--toc.json  pcf-hoc.json  pcf-shipment-footprint.json  pcf-tad.json  pcf-toc.json  shipment-footprint.json  tad.json  toc.json
ileap-data-model/sql-example/: ileap.sql
ileap-data-model/src/: arbitrary_impls.rs  data_gen.rs  lib.rs  main.rs  pact_integration.rs  schema_gen.rs
ileap-data-model/tests/: integration_tests.rs  tests.rs
pact-data-model/: Cargo.toml
pact-data-model/schema/: data-model-schema.json
pact-data-model/src/: lib.rs  main.rs  schema_gen.rs
pact-data-model/tests/: integration_tests.rs  tests.rs
schema/: data-model-schema.json
tests/: tests.rs
