[package]
name = "demo-api"
version = "0.2.0-wip"
edition = "2018"
license = "MIT"

[[bin]]
name = "demo-api"
path = "src/main.rs"

[dependencies]
ileap-data-model = { path = "../ileap-data-model" }
pact-data-model = { path = "../pact-data-model" }
lazy_static = "1.4.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rocket_okapi = { version = "0.9.0", features = ["swagger", "secrets"] }
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono"] }
rust_decimal = "^1.40"
rust_decimal_macros = "^1.40"
okapi = "0.7.0-rc.1"
base64 = "0.22.1"
url = { version = "2.5.8", features = ["serde"] }
rsa = { version = "0.9.10", features = ["pem", "sha2"] }
rand = "0.9.2"
serde_json = "1.0"

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.uuid]
version = "1.20"
features = ["v4", "serde"]
