[package]
name = "ileap-data-model"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pact-data-model = { path = "../pact-data-model" }
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.137"
rust_decimal = "1.35.0"
rust_decimal_macros = "^1.20"
regex = "1.11.1"
quickcheck = "1"
quickcheck_macros = "1"
uuid = { version = "1.11", features = ["v4", "serde"] }
