[package]
name = "pact-data-model"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "pact-data-model"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8.21", features = ["chrono"] }
rust_decimal = "1.35.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
