[package]
name = "pact-data-model"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "pact-data-model"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8.22", features = ["chrono"] }
rust_decimal = { version = "1.39", features = ["serde-str"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
